--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ]
   },
   "dependencies": {
-    "cow-sdk-test": "0.0.3",
+    "@gnosis.pm/cow-sdk": "^0.0.6",
     "cross-env": "^7.0.3",
     "dotenv": "^8.1.0",
     "ethers": "^5.5.4",
